kubernetes/Meowney-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: Meowney-svc
  namespace: Meowney
spec:
  selector:
    app: Meowney
  ports:
  - port: 8080
    targetPort: 8080
